<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:gravity="bottom" android:id="@+id/linearLayout">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/profiledefault"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/imageView"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="28dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/textView2"
            tools:text="PaulineB"
            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:id="@+id/textView"
            tools:text="pauline@example.com" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
    />

</android.support.constraint.ConstraintLayout>
